@@ -512,19 +512,26 @@
 
   </target>
 
-  <!-- install-maven-tasks is *not* a useless dependency. do not remove -->
-  <target name="generate-maven-artifacts" depends="install-maven-tasks">
+  <target name="-dist-maven" depends="install-maven-tasks">
     <sequential>
-      <subant target="dist-maven" failonerror="true" inheritall="false">
-        <propertyset refid="uptodate.and.compiled.properties"/>
+      <m2-deploy pom.xml="${filtered.pom.templates.dir}/pom.xml"/>        <!-- Lucene/Solr grandparent POM -->
+      <m2-deploy pom.xml="${filtered.pom.templates.dir}/lucene/pom.xml"/> <!-- Lucene parent POM -->
+      <subant target="-dist-maven" failonerror="true" inheritall="false">
         <fileset dir="${common.dir}/core" includes="build.xml"/>
         <fileset dir="${common.dir}/test-framework" includes="build.xml"/>
       </subant>
-      
-      <modules-crawl target="dist-maven"/>
+      <modules-crawl target="-dist-maven"/>
     </sequential>
   </target>
-	
+
+  <target name="generate-maven-artifacts" depends="-unpack-lucene-tgz">
+    <sequential>
+      <ant dir=".." target="resolve" inheritall="false"/>
+      <antcall target="-filter-pom-templates" inheritall="false"/>
+      <antcall target="-dist-maven" inheritall="false"/>
+    </sequential>
+  </target>
+  
   <target name="-validate-maven-dependencies" depends="compile-tools, install-maven-tasks, load-custom-tasks">
     <sequential>
       <subant target="-validate-maven-dependencies" failonerror="true" inheritall="false">
