@@ -1381,10 +1381,7 @@ ${tests-output}/junit4-*.suites     - per-JVM executed suites
              classpathref="maven-ant-tasks.classpath"/>
   </target>
 
-  <target name="dist-maven"
-          depends="filter-pom-templates, install-maven-tasks, m2-deploy-lucene-parent-pom, -unpack-lucene-tgz, dist-maven-common"/>
-  <target name="dist-maven-common"
-          depends="jar-src, javadocs, install-maven-tasks, filter-pom-templates">
+  <target name="-dist-maven" depends="install-maven-tasks, jar-src, javadocs">
     <sequential>
       <property name="top.level.dir" location="${common.dir}/.."/>
       <pathconvert property="pom.xml">
@@ -1407,10 +1404,7 @@ ${tests-output}/junit4-*.suites     - per-JVM executed suites
     </sequential>
   </target>
 
-  <target name="dist-maven-src-java"
-          depends="filter-pom-templates, install-maven-tasks, m2-deploy-lucene-parent-pom, -unpack-lucene-tgz, dist-maven-common-src-java"/>
-  <target name="dist-maven-common-src-java"
-          depends="-unpack-lucene-tgz, jar-src, javadocs, install-maven-tasks, filter-pom-templates">
+  <target name="-dist-maven-src-java" depends="install-maven-tasks, jar-src, javadocs">
     <sequential>
       <property name="top.level.dir" location="${common.dir}/.."/>
       <pathconvert property="pom.xml">
@@ -1433,7 +1427,7 @@ ${tests-output}/junit4-*.suites     - per-JVM executed suites
     </sequential>
   </target>
   
-  <target name="-validate-maven-dependencies.init" depends="filter-pom-templates">
+  <target name="-validate-maven-dependencies.init" depends="-filter-pom-templates">
     <!-- find the correct pom.xml path and assigns it to property pom.xml -->
     <property name="top.level.dir" location="${common.dir}/.."/>
     <pathconvert property="maven.pom.xml">
@@ -1492,10 +1486,8 @@ ${ant.project.name}.test.dependencies=${test.classpath.list}
   </target>
 
   <property name="maven.dependencies.filters.file" location="${common.build.dir}/maven.dependencies.filters.properties"/>
-  <available file="${maven.dependencies.filters.file}" property="maven.dependencies.filters.file.exists"/>
 
-  <target name="-get-maven-dependencies" depends="compile-tools,resolve,load-custom-tasks"
-          unless="maven.dependencies.filters.file.exists">
+  <target name="-get-maven-dependencies" depends="compile-tools,load-custom-tasks">
     <ant dir="${common.dir}/.." target="-append-all-modules-dependencies-properties" inheritall="false"/>
     <get-maven-dependencies-macro
         dir="${common.dir}/.."
@@ -1518,7 +1510,7 @@ ${ant.project.name}.test.dependencies=${test.classpath.list}
     </copy>
   </target>
 
-  <target name="filter-pom-templates" depends="-get-maven-dependencies" unless="filtered.pom.templates.uptodate">
+  <target name="-filter-pom-templates" depends="-get-maven-dependencies">
     <mkdir dir="${filtered.pom.templates.dir}"/>
     <copy todir="${common.dir}/build/poms" overwrite="true" encoding="UTF-8" filtering="on">
       <fileset dir="${common.dir}/../dev-tools/maven"/>
@@ -1530,19 +1522,6 @@ ${ant.project.name}.test.dependencies=${test.classpath.list}
       </filterset>
       <globmapper from="*.template" to="*"/>
     </copy>
-    <property name="filtered.pom.templates.uptodate" value="true"/>
-  </target>
-
-  <target name="m2-deploy-lucene-parent-pom" depends="filter-pom-templates,m2-deploy-grandparent-pom"
-          unless="deployed.lucene.parent.pom.uptodate">
-    <m2-deploy pom.xml="${filtered.pom.templates.dir}/lucene/pom.xml"/>    <!-- Lucene parent POM -->
-    <property name="deployed.lucene.parent.pom.uptodate" value="true"/>
-  </target>
-
-  <target name="m2-deploy-grandparent-pom" depends="filter-pom-templates"
-          unless="deployed.grandparent.pom.uptodate">
-    <m2-deploy pom.xml="${filtered.pom.templates.dir}/pom.xml"/>    <!-- Lucene/Solr grandparent POM -->
-    <property name="deployed.grandparent.pom.uptodate" value="true"/>
   </target>
 
   <target name="stage-maven-artifacts">
